use the new stream feature